# VAR-PIP

./: README.md  project_overview.md  var-product-intelligence-design.md
var-product-intelligence/: .env.example  .gitignore  DEVICE_CATALOG.md  README.md  products_pricing.csv  pyproject.toml  requirements.txt  seed_data.json
var-product-intelligence/app/: __init__.py  config.py  dependencies.py  main.py  mcp_server.py
var-product-intelligence/app/api/: __init__.py  categories.py  compare.py  extract.py  products.py  vendors.py
var-product-intelligence/app/data/: __init__.py  wireless_schema.py
var-product-intelligence/app/models/: __init__.py  category.py  database.py  product.py  solution.py  vendor.py
var-product-intelligence/app/schemas/: __init__.py  category.py  cisco_pricing.py  compare.py  extract.py  price_import.py  product.py  solution.py  vendor.py
var-product-intelligence/app/scripts/: seed.py
var-product-intelligence/app/services/: __init__.py  cisco_pricing_service.py  comparison_service.py  extraction_service.py  filter_service.py  pdf_generator.py  price_import_service.py  product_service.py  solution_service.py
var-product-intelligence/app/utils/: __init__.py  auth.py
